Navigation and search via plugin.

--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,9 @@
   "icons": {
     "48": "icons/app.png"
   },
+  "permissions": [
+    "activeTab"
+  ],
   "content_scripts": [
     {
       "matches": ["*://*/*"],
